blog alignment fix

--- a/src/components/Blog/Blog.module.scss
+++ b/src/components/Blog/Blog.module.scss
@@ -5,8 +5,7 @@
   font-family: serif;
   cursor: pointer;
   transition: 0.2s ease, transform 0.2s ease;
-  max-width: 10.5in;
-  width: 80vw;
+  width: 100%;
   margin-bottom: 1.2rem;
   // background-color: #e4e0df
   background-color: whitesmoke;
