--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -5,6 +5,8 @@
   gap: 16px;
   padding: 16px;
   margin-top: 16px;
+  max-width: 10.5in;
+  width: 80vw;
 }
 
 
